Fuera de Línea : Mensajería de Transacción Rechazada.

--- a/Suma2Lealtad/Views/FueraLineaPrepago/Table.cshtml
+++ b/Suma2Lealtad/Views/FueraLineaPrepago/Table.cshtml
@@ -56,7 +56,7 @@
             </td>
             <td>
                 <a href="@Url.Action("AddNew", "FueraLineaPrepago", new { id = item.Afiliado.id })" class="btn btn-info btn-sm">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <span class="glyphicon glyphicon-usd"></span>
                 </a>
             </td>
         </tr>                 
