--- a/Suma2Lealtad/Views/AfiliadoSuma/PinPadReiniciarPin.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/PinPadReiniciarPin.cshtml
@@ -1,4 +1,4 @@
-﻿@model Suma2Lealtad.Models.BeneficiarioPrepago
+﻿@model Suma2Lealtad.Models.AfiliadoSuma
 
 @{
     ViewBag.Title = "Reiniciar Pin";
@@ -9,72 +9,45 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Prepago / Beneficiario / Operaciones con el PinPad / Reiniciar Pin</h3>
+            <h3 class="panel-title">Afiliado / Operaciones con el PinPad / Reiniciar Pin</h3>
         </div>
 
         <div class="panel-body">
-
-            @Html.HiddenFor(model => model.Cliente.idCliente)
-
-            <div class="editor-label col-md-4 control-label">
-                Cliente :
-            </div>
-            <div class="editor-field col-md-6">
-                @Html.TextBoxFor(model => model.Cliente.nameCliente, new { @class = "form-control", @readonly = "true" })
-            </div>
-
-            <div class="editor-label col-md-4 control-label">
-                RIF :
-            </div>
-            <div class="editor-form col-md-6">
-                @Html.TextBoxFor(model => model.Cliente.rifCliente, new { @class = "form-control", @readonly = "true" })
-            </div>
-            <div class="editor-label col-md-4 control-label">
-                Teléfono :
-            </div>
-            <div class="editor-form col-md-6">
-                @Html.TextBoxFor(model => model.Cliente.phoneCliente, new { @class = "form-control", @readonly = "true" })
-            </div>
-
-            <div class="editor-label col-md-4 control-label"></div>
-            <div class="editor-field col-md-8">
-                <br />
-            </div>
 
             <div class="editor-label col-md-4 control-label">
                 Tipo de Afiliado :
             </div>
 
             <div class="editor-field col-md-6">
-                @Html.TextBoxFor(model => model.Afiliado.type, new { @class = "form-control", @readonly = "true" })
+                @Html.TextBoxFor(model => model.type, new { @class = "form-control", @readonly = "true" })
             </div>
 
             <div class="editor-label col-md-4 control-label">
                 Nombre del Afiliado :
             </div>
             <div class="editor-form col-md-6">
-                @Html.TextBox("name", @Model.Afiliado.name + " " + @Model.Afiliado.lastname1, new { @class = "form-control", @readonly = "true" })
+                @Html.TextBox("name", @Model.name + " " + @Model.lastname1, new { @class = "form-control", @readonly = "true" })
             </div>
 
             <div class="editor-label col-md-4 control-label">
                 Número de Documento/Cédula :
             </div>
             <div class="editor-form col-md-6">
-                @Html.TextBox("docnumber", @Model.Afiliado.docnumber, new { @class = "form-control", @readonly = "true" })
+                @Html.TextBox("docnumber", @Model.docnumber, new { @class = "form-control", @readonly = "true" })
             </div>
 
             <div class="editor-label col-md-4 control-label">
                 Número de Tarjeta :
             </div>
             <div class="editor-form col-md-6">
-                @Html.TextBox("pan", @Model.Afiliado.pan, new { @class = "form-control", @readonly = "true" })
+                @Html.TextBox("pan", @Model.pan, new { @class = "form-control", @readonly = "true" })
             </div>
 
             <div class="editor-label col-md-4 control-label">
                 Estatus de Tarjeta :
             </div>
             <div class="editor-form col-md-6">
-                @Html.TextBox("estatustarjeta", @Model.Afiliado.estatustarjeta, new { @class = "form-control", @readonly = "true" })
+                @Html.TextBox("estatustarjeta", @Model.estatustarjeta, new { @class = "form-control", @readonly = "true" })
             </div>
 
             <!-- btn btn-success -->
@@ -101,7 +74,7 @@
 
             <div class="col-md-12 col-tabla-btn">
                 <div class="pull-right">
-                    <a href="@Url.Action("FilterReview", "BeneficiarioPrepago")" class="btn btn-danger btn-md">Regresar</a>
+                    <a href="@Url.Action("FilterReview", "AfiliadoSuma")" class="btn btn-danger btn-md">Regresar</a>
                 </div>
             </div>
 
