--- a/Suma2Lealtad/Views/AfiliadoSuma/Filter.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/Filter.cshtml
@@ -8,7 +8,7 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Afiliado / Crear Afiliación / Filtro de Búsqueda</h3>
+            <h3 class="panel-title">Afiliado / Crear Afiliado / Filtro de Búsqueda</h3>
         </div>
 
         <div class="panel-body">
