--- a/Suma2Lealtad/Views/ClientePrepago/CargarArchivoRecarga.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/CargarArchivoRecarga.cshtml
@@ -78,6 +78,9 @@
 
                 <!-- SECCION PARA botones de operaciones -->
                 <div class="col-md-12 col-tabla-btn">
+                     <div class="pull-left">
+                        <a href="@Url.Action("DescargarArchivoFilePath", "ClientePrepago")" class="btn btn-success btn-md">Descargar plantilla</a>
+                    </div>
                     <div class="pull-right">
                         <input type="submit" class="btn btn-success btn-md" value="Cargar Archivo" />
                         <a href="@Url.Action("FilterOrdenes", "ClientePrepago", new { id = Model.First().idCliente })" class="btn btn-danger btn-md">Regresar</a>
