--- a/Suma2Lealtad/Views/ClientePrepago/IndexBeneficiarios.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/IndexBeneficiarios.cshtml
@@ -121,7 +121,13 @@
                                         <span class="glyphicon glyphicon-ok"></span>
                                     </a>
                                   }
-                                }
+                                  else
+                                  {
+                                    <a id="@(item.Afiliado.id)_delete" href="@Url.Action("DeleteBeneficiario", "ClientePrepago", new { id = item.Cliente.idCliente, idBeneficiario = item.Afiliado.id })" class="btn btn-danger btn-sm" >
+                                        <span class="glyphicon glyphicon-remove"></span>
+                                    </a>
+                                  }
+                                }                          
                             </td>
 
                             <td>
