--- a/Suma2Lealtad/Views/OrdenRecargaPrepago/DetalleOrden.cshtml
+++ b/Suma2Lealtad/Views/OrdenRecargaPrepago/DetalleOrden.cshtml
@@ -49,7 +49,7 @@
                 <br />
             </div>
 
-            <form id="commentForm" method="post" action="@Url.Action("AprobarOrden", "ClientePrepago", new { id = Model.First().idCliente, idOrden = Model.First().idOrden, indicadorGuardar = @indicadorGuardar })" class="form-horizontal">
+            <form id="commentForm" method="post" action="@Url.Action("AprobarOrden", "OrdenRecargaPrepago", new { id = Model.First().idOrden, indicadorGuardar = @indicadorGuardar })" class="form-horizontal">
 
                 <div class="editor-label col-md-4 control-label">
                     Cliente :
@@ -155,18 +155,18 @@
                                 <td>
                                     @{if (Model.First().statusOrden == "Nueva")
                                       {
-                                          <p class ="ObservacionesInicial">@Html.DisplayFor(modelItem => Model[i].observacionesExclusion)</p>                                           
-                                          @Html.TextBoxFor(modelItem => Model[i].observacionesExclusion, new { @class = "form-control Observaciones" })                                          
+                                        <p class="ObservacionesInicial">@Html.DisplayFor(modelItem => Model[i].observacionesExclusion)</p>                                           
+                                        @Html.TextBoxFor(modelItem => Model[i].observacionesExclusion, new { @class = "form-control Observaciones" })                                          
                                       }
                                       else if (Model[i].statusDetalleOrden == "Procesado")
                                       {
                                           if (Model[i].resultadoRecarga == "0")
                                           {
-                                            @Html.DisplayFor(modelItem => Model[i].observacionesExclusion) 
+                                        @Html.DisplayFor(modelItem => Model[i].observacionesExclusion) 
                                           }
                                           else
                                           {
-                                            @(String.Format("{0} ({1})", Model[i].observacionesExclusion, Model[i].resultadoRecarga))
+                                        @(String.Format("{0} ({1})", Model[i].observacionesExclusion, Model[i].resultadoRecarga))
                                           }
                                       }
                                       else
@@ -233,7 +233,7 @@
                               if (@indicadorGuardar == "Aprobar")
                               {                            
                             <input id="Aprobar" type="submit" class="btn btn-success btn-md" value="Aprobar Orden" />
-                            <a id="Rechazar" href="@Url.Action("RechazarOrden", "ClientePrepago", new { id = Model.First().idCliente, idOrden = Model.First().idOrden })" class="btn btn-success btn-md">Rechazar Orden</a>
+                            <a id="Rechazar" href="@Url.Action("RechazarOrden", "OrdenRecargaPrepago", new { id = Model.First().idOrden })" class="btn btn-success btn-md">Rechazar Orden</a>
                               }
                               else
                               {                                  
@@ -242,10 +242,10 @@
                           }
                           else if (Model.First().statusOrden == "Aprobada")
                           {
-                            <a href="@Url.Action("ProcesarOrden", "ClientePrepago", new { id = Model.First().idCliente, idOrden = Model.First().idOrden })" class="btn btn-success btn-md">Procesar Orden</a>
+                            <a href="@Url.Action("ProcesarOrden", "OrdenRecargaPrepago", new { id = Model.First().idOrden })" class="btn btn-success btn-md">Procesar Orden</a>
                           }
                         }
-                        <a href="@Url.Action("FilterOrdenes", "ClientePrepago", new { id = Model.First().idCliente })" class="btn btn-danger btn-md">Regresar</a>
+                        <a href="@Url.Action("FilterReview", "OrdenRecargaPrepago")" class="btn btn-danger btn-md">Regresar</a>
                     </div>
                 </div>
 
@@ -336,11 +336,11 @@
                     case 3:
                         campo4 = $.trim($(this).text());
                         break;
-                    //case 4:
-                    //    if ($(this).children("input").val() != "") {
-                    //        $(this).children("input").show();
-                    //    }
-                    //    break;
+                        //case 4:
+                        //    if ($(this).children("input").val() != "") {
+                        //        $(this).children("input").show();
+                        //    }
+                        //    break;
                 }
             });
             if (campo4 != "Excluido") {
